# miden-hack

./: README.md
contract/: account.toml  mns.masm
contract_test/: Cargo.toml
contract_test/src/: main.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
server/: Cargo.toml  store.sqlite
server/src/: main.rs
