[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
miden-client = { version = "0.8.1", features = ["sqlite", "tonic"] }
miden-lib = "0.8.0"
miden-objects = "0.8.1"
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
